Use more efficient array init method