@@ -138,7 +138,7 @@ public class UserManager implements IDBSaveable, IHasPermission, IReadModifiable
         Map<PermissionLevel, List<String>> permDict = new HashMap<>();
         // for now, everyone can make a new user
         List<String> studentPermissions = Arrays.asList("print", "checkout", "newuser");
-        List<String> instructorPermissions = Arrays.asList("all");
+        List<String> instructorPermissions = List.of("all");
         permDict.put(PermissionLevel.STUDENT, studentPermissions);
         permDict.put(PermissionLevel.INSTRUCTOR, instructorPermissions);
         return permDict;
